#5089 fix - side menu buttons alignment in FF

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/ThemeDark.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/ThemeDark.rtl.css
@@ -990,7 +990,6 @@ Page Loading
 .unreg-user .google {
   color: #676767;
   background: #fff;
-  border: 1px solid #fff;
 }
 .unreg-user .emailImg:after {
   background: #676767;
