--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -119,7 +119,7 @@
         > .md-button, > button {
             .displayFlex;
 
-            > span:not(.icon) {
+            > span:not(.icon), .title {
                 margin-left: 35px;
             }
         }
