--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/siteColors.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/siteColors.less
@@ -1377,7 +1377,6 @@ Page Loading
         .google {
             color: #676767;
             background: #fff;
-            border: 1px solid #fff;
         }
 
         .emailImg:after {
