--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.css
@@ -1019,7 +1019,6 @@ Page Loading
 .theme-light .unreg-user .google {
   color: #676767;
   background: #fff;
-  border: 1px solid #fff;
 }
 .theme-light .unreg-user .emailImg:after {
   background: #676767;
